# HELICS-FMI

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  CPPLINT.cfg  LICENSE  NOTICE  README.md  appveyor.yml  config.h.in  griddyn-config.h.in
.ci/: azure-pipelines.yml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/: run-clang-tidy-pr.sh
.github/workflows/: msys2.yml  static-analyzers.yml
config/: Doxyfile.in  addBoost.cmake  addSundials.cmake  buildHELICS.cmake  buildSundials.cmake  configGenerator.cmake  helics-fmi-config.h.in
config/cmake/: CheckCXXFeatureTestingMacro.cmake  FindKLU.cmake  FindMiniZip.cmake  FindSUNDIALS.cmake  FindZLIB.cmake  Findsundials2.cmake  addBoost.cmake  addFMUreferences.cmake  addHELICS.cmake  addHELICSsubproject.cmake  addJsoncpp.cmake  addKLU_targets.cmake  addSundials.cmake  addSundials.cmake.old  addUnits.cmake  addfmt.cmake  buildExternal.cmake  buildHELICS.cmake  buildMiniZip.cmake  buildSuiteSparse.cmake  buildSundials.cmake  buildZlib.cmake  compiler_flags.cmake  configGenerator.cmake  extraMacros.cmake  helicsPackageDownload.cmake  mergestaticlibs.cmake  updateGitSubmodules.cmake
docs/: conf.py  index.rst  installation.md  quickStart.md  requirements.txt
docs/details/: cosimulation.rst  index.rst  model_exchange.rst
docs/installation/: cmake_variables.rst
docs/introduction/: how.rst  index.rst  sources.rst  testing.rst
docs/user-guide/: helics_fmi.rst  index.rst
scripts/: install-ci-dependencies.sh  install-dependency.sh  run-ci-tests.sh  run-circleci-tests-sanitizer.sh  run-circleci-tests.sh
src/fmi/: CMakeLists.txt  fmiGDinfo.cpp  fmiGDinfo.h  fmi_import1.cpp  fmi_import2.cpp
src/fmi/FMI2/: fmi2FunctionTypes.h  fmi2Functions.h
src/fmi/fmi_import/: fmi2CoSimObject.cpp  fmi2ModelExchangeObject.cpp  fmi2Object.cpp  fmiEnumDefinitions.cpp  fmiEnumDefinitions.h  fmiImport.cpp  fmiImport.h  fmiInfo.cpp  fmiInfo.h  fmiLibraryManager.cpp  fmiLibraryManager.h  fmiObjects.h  fmiVariableSet.cpp
src/formatInterpreters/: CMakeLists.txt  JsonProcessingFunctions.cpp  JsonProcessingFunctions.hpp  TomlProcessingFunctions.cpp  TomlProcessingFunctions.hpp  jsonElement.cpp  jsonElement.h  jsonReaderElement.cpp  jsonReaderElement.h  readerElement.cpp  readerElement.h  tinyxml2ReaderElement.cpp  tinyxml2ReaderElement.h  tomlElement.cpp  tomlElement.h  tomlReaderElement.cpp  tomlReaderElement.h
src/helicsFMI/: CMakeLists.txt  FmiCoSimFederate.cpp  FmiCoSimFederate.hpp  FmiHelics.cpp  FmiHelics.hpp  FmiHelicsLogging.hpp  FmiModelExchangeFederate.cpp  FmiModelExchangeFederate.hpp  OdeSolverBase.hpp  basicOdeSolver.h  solverInterface.h  sundialsInterface.h
src/main/: CMakeLists.txt  FmiCoSimFederate.cpp  FmiCoSimFederate.hpp  FmiModelExchangeFederate.cpp  FmiModelExchangeFederate.hpp  OdeSolverBase.hpp  helics-fmi-main.cpp  helics-fmi.cpp  helics-fmi.h  helicsFmiRunner.cpp  helicsFmiRunner.hpp
src/solvers/: CMakeLists.txt  OdeSolverBase.hpp  SolvableObject.hpp  arkodeInterface.cpp  arkodeInterface.h  basicOdeSolver.cpp  basicOdeSolver.h  cvodeInterface.cpp  cvodeInterface.h  helperObject.h  solverInterface.cpp  solverInterface.h  solverMode.cpp  solverMode.hpp  solver_definitions.hpp  sundialsInterface.cpp  sundialsInterface.h  sundialsMatrixData.h  sundialsMatrixDataDense.cpp  sundialsMatrixDataSparseColumn.cpp  sundialsMatrixDataSparseRow.cpp
src/utilities/: BlockingQueue.hpp  CMakeLists.txt  dataDictionary.h  dataDictionary.hpp  functionInterpreter.cpp  functionInterpreter.h  gridRandom.cpp  gridRandom.h  helperObject.cpp  helperObject.h  indexTypes.hpp  logger.cpp  logger.h  mapOps.hpp  matrixCreation.cpp  matrixCreation.h  matrixData.hpp  matrixDataBoost.hpp  matrixDataCompact.hpp  matrixDataContainer.hpp  matrixDataCustomWriteOnly.hpp  matrixDataFilter.hpp  matrixDataOrdered.hpp  matrixDataOrdering.hpp  matrixDataScale.hpp  matrixDataSparse.cpp  matrixDataSparse.hpp  matrixDataSparseSM.hpp  matrixDataSparse_impl.hpp  matrixDataTranslate.hpp  matrixOps.cpp  matrixOps.h  optionalDef.hpp  saturation.cpp  saturation.h  simpleQueue.hpp  stackInfo.cpp  stackInfo.h  stringConversion.h  stringOps.h  (+15 more)
test/: CMakeLists.txt
tests/: BouncingBallFMITests.cpp  BouncingBallHelicsTests.cpp  CMakeLists.txt  FeedthroughHelicsTests.cpp  ResourceExecutableTests.cpp  ResourceFMITests.cpp  ResourceHelicsTests.cpp  RunnerTests.cpp  WindowsTest1.cpp  exeTestHelper.cpp  exeTestHelper.h  fmiFailureTests.cpp  fmiLoadTests.cpp  fmiTests.cpp  helics-fmiTests.cpp  helicsFmiExecutableTests.cpp  helicsFmiFailureTests.cpp  helicsFmiTests.cpp
tests/ExeTests/: CMakeLists.txt  FeedThroughExecutableTests.cpp  ResourceExecutableTests.cpp  RunnerTests.cpp  exeFailureTests.cpp  exeTestHelper.cpp  helicsFmiExecutableTests.cpp  runnerFailureTests.cpp
tests/FmiTests/: BouncingBallFMITests.cpp  CMakeLists.txt  FeedThroughFMITests.cpp  ResourceFMITests.cpp  VanDerPolFMITests.cpp  fmiTests.cpp
tests/HelicsFmiTests/: BouncingBallHelicsTests.cpp  CMakeLists.txt  FeedthroughHelicsTests.cpp  helicsFmiFailureTests.cpp  helicsFmiTests.cpp
tests/test_files/: HELICS_CyDER_Controller.fmu  HELICS_CyDER_Generator.fmu  compileRunCoupledSystem.py  cyder.json  example_connections1.json  example_connections1.toml  example_connections2.json  example_connections2.toml  ft_connections.json  ft_connections.toml  missingSO.fmu  test1.json  validZip.fmu
